@@ -448,6 +448,8 @@ issues you find at
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1708'>UIMA-1708</a>] -         Trailing blank following log property level causing problems with IBM Java 6
 </li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-1718'>UIMA-1718</a>] -         The UIMA core code fails to unlock a CAS if there is an exception in CasMultiplier's next() or hasNext() methods
+</li>
 </ul>
     
 <h2>        Improvement
@@ -637,6 +639,8 @@ issues you find at
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1695'>UIMA-1695</a>] -         Eclipse tooling: CDE fully instantiates components of aggregates, resulting in OutOfMemory issues
 </li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-1719'>UIMA-1719</a>] -         update copyright and pub dates to 2010
+</li>
 </ul>
     
 <h2>        New Feature
@@ -676,13 +680,13 @@ issues you find at
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1614'>UIMA-1614</a>] -         update 2.3.0-incubating-SNAPSHOT to drop the snapshot in prep for release
 </li>
 </ul>
-        
+            
 <h2>        Test
 </h2>
 <ul>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1389'>UIMA-1389</a>] -         Remove OpenNLP example wrapper
 </li>
 </ul>
-
+    
 </body>
 </html>
