@@ -282,6 +282,7 @@ Release Notes - UIMA - Version 2.3
     * [UIMA-1692] - add missing license headers to .project files etc. in uimaj-eclipse-... projects
     * [UIMA-1694] - Error 'scm url cannot be null' on uimaj POM
     * [UIMA-1708] - Trailing blank following log property level causing problems with IBM Java 6
+    * [UIMA-1718] - The UIMA core code fails to unlock a CAS if there is an exception in CasMultiplier's next() or hasNext() methods
 
 ** Improvement
     * [UIMA-71] - New v2 features missing from tutorial chapters
@@ -376,6 +377,7 @@ Release Notes - UIMA - Version 2.3
     * [UIMA-1689] - fix some miscompares between svn export and source-distribution
     * [UIMA-1691] - change checkout to export in extract and build scripts
     * [UIMA-1695] - Eclipse tooling: CDE fully instantiates components of aggregates, resulting in OutOfMemory issues
+    * [UIMA-1719] - update copyright and pub dates to 2010
 
 ** New Feature
     * [UIMA-1046] - CVD should support an ini file parameter on the command line
@@ -399,6 +401,7 @@ Release Notes - UIMA - Version 2.3
     * [UIMA-1614] - update 2.3.0-incubating-SNAPSHOT to drop the snapshot in prep for release
 
 
+
 ** Test
     * [UIMA-1389] - Remove OpenNLP example wrapper
-      
+    
